--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 
 body {
   font-family: 'Space Grotesk', sans-serif;
-  color: #FFFFFF;
-  background-color: #242424;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.8);
   margin: 0; /* Remove default margin from body */
   padding-top: 60px; /* Adjust this value to match your navbar's height */
 }
@@ -12,4 +12,3 @@ body {
 .content--hidden {
   display: none;
 }
-
